Header no longer overlapping products on home page.

--- a/local_artisan/css/index.css
+++ b/local_artisan/css/index.css
@@ -45,7 +45,7 @@ body {
   padding: 0 2rem;
 }
 .title {
-  font-size: 3rem;
+  font-size: 45px;
   font-family: 'Cinzel Decorative', serif;
   letter-spacing: 2px;
 }
